[build-system]
requires = ["setuptools>=45", "wheel", "pybind11[global]>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pylru"
version = "1.0.0"
description = "A high-performance LRU cache implementation in C++ with Python bindings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = ["pybind11>=2.6.0"]

[project.urls]
Homepage = "https://github.com/yourusername/pylru"
Repository = "https://github.com/yourusername/pylru"
Issues = "https://github.com/yourusername/pylru/issues"
